[tool.poetry]
name = "poet"
version = "1"
description = "teste"
authors = ["luistaka <luis.f.takahashi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^1.2.4"
pyarrow = "^8.0.0"
pyspark = "^3.1.1"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"